# Atari-PS1

./: CMakeLists.txt  Makefile  main.c
.github/workflows/: build.yml
src/: main.c
